changed the down-arrow on the landing page, added projects to the landing page, fixed the z-index issue on the services page

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -31,10 +31,9 @@
 @media (max-width: 568px) {
   .header-positioning {
     display: none;
-    // position: fixed;
   }
   .header-container {
     background: $off-white;
-    // top: 0px;
+    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.25);
   }
 }
