--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -35,7 +35,6 @@
   font-family: $header-font;
 }
 .link-wrapper {
-    padding-bottom: 16px;
     border: 1px solid $grey;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     margin: 8px 0px;
