--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -21,6 +21,7 @@
   display: flex;
   flex-flow: row wrap;
   margin-bottom: 40px;   
+  z-index: 0;
 }
 .service-display-info {
   width: 50%;
