--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -61,6 +61,16 @@ body {
 .no-scroll {
   overflow: hidden;
 }
+.full-width {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: $off-white;
+  opacity: 0.5;
+  z-index: 20;
+}
 
 @media (max-width: 568px) {
   .header-text {
